ToDos/deploy-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
      - name: external-registry
      containers:
      - name: web
        image: dawidsages.azurecr.io/todos-pg-api:latest
        ports:
        - containerPort: 3001
        resources:
          requests:
            memory: "128Mi"
            cpu: "1m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /api
            port: 3001
          initialDelaySeconds: 20
          periodSeconds: 5
