ToDos/service-be.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-api
spec:
  selector:
    app: api
  ports:
  - port: 3001
    targetPort: 3001
  type: NodePort
