ToDos/service-fe.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-web
spec:
  selector:
    app: web
  ports:
  - port: 3000
    targetPort: 3000
  type: NodePort
