ToDos/ingress-todos.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todos-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: dawidapp.mooo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todos-web
            port:
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: todos-api
            port:
              number: 3001
