ToDos/networkpolicy-allow-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-controller
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  # Pozwól na ruch z namespace ingress-nginx (ingress controller)
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - protocol: TCP
      port: 80
